--- a/homepage.html
+++ b/homepage.html
@@ -13,30 +13,85 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js/"></script>
 </head>
 <body>
+	<ul class="circles">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+	</ul>
 	<!-- .wrapper คือ กระดาษลองพื้นขาว ๆ-->
 	<!-- nav ul คือ แถบสีเท่าเข้มตรง navigation bar-->
 	<div class="wrapper">
 		<header>
 			<h1>Yoko's Kitchen</h1>
-			<div class="nav">
-				<div class="ul">
-					<div class="li"><a href="homepage.html" class="current">Home</a></div>
-					<div class="li"><a href="">Download</a></div>
-					<div class="li"><a href="">Shops</a></div>	
+		</header>
+		<div class="navbar">
+			<div class="ul">
+				<div class="li">
+					<a class="current" href="#home">Home</a>
+					<a class="li" href="#news">Download</a>
+					<a class="li" href="#news">Shops</a>
 					<div class="dropdown">
-						<div class="li" class="dropbtn"><a href="">About</a></div>
+						<a class="li" class="dropbtn" href="#">About us</a>
 						<div class="dropdown-content">
-							<a href="aboutus.html">Team Member</a>
+							<a href="#">Team Members</a>
 							<a href="#">Game Introduction</a>
 							<a href="#">Contact Us</a>
-						</div>
-					</div>
-					<div class="li"><a href="">Search</a></div>	
-					<div class="li" style="margin-left:13em"><a href="">Login</a></div>
-					<div class="li"><a href="">Sign up</a></div>
-				</ul>
+						</div> 
+					</div> 
+					<a class="li" href="#news" style="margin-left: 20em">Log in</a>
+					<a class="li" href="#news">Sign up</a>
+				</div>
 			</div>
-		</header>
+		  </div>
 		<section class="courses">
 			<article>
 				<figure>
@@ -69,10 +124,9 @@
 				</figure>
 				<hgroup>
 					<h2>New Minecraft Mob!!</h2>
-					<h3>Monster of The Depht, Warden!</h3>
+					<h3>Cuteness of the marine</h3>
 				</hgroup>
-				<p>The Warden will be the first blind mob to be added to Minecraft. 
-					Instead of following the player normally, it uses the sculk-like sensors on its head to detect vibrations.</p>
+				<p>Axolotls are tamable, aquatic mobs that will spawn in the rivers of the lush caves.</p>
 			</article>
 		</section>
 		<aside>
