--- a/homepage.html
+++ b/homepage.html
@@ -87,7 +87,8 @@
 							<a href="#">Contact Us</a>
 						</div> 
 					</div> 
-					<a class="li" href="#news" style="margin-left: 20em">Log in</a>
+					<a class="li" href="#news">Search</a>
+					<a class="li" href="#news" style="margin-left: 13em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
