Latest update!, Use my CSS for formatting

--- a/homepage.html
+++ b/homepage.html
@@ -149,7 +149,7 @@
 			
 		</aside>
 		<footer>
-			&copy; Last Updated: 12-Jan-2022  
+			&copy; Last Updated: 12-Jan-2022 at 10:46 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
