--- a/homepage.html
+++ b/homepage.html
@@ -76,13 +76,13 @@
 		<div class="navbar">
 			<div class="ul">
 				<div class="li">
-					<a class="current" href="#home">Home</a>
+					<a class="current" href="homepage.html">Home</a>
 					<a class="li" href="#news">Download</a>
 					<a class="li" href="#news">Shops</a>
 					<div class="dropdown">
-						<a class="li" class="dropbtn" href="#">About us</a>
+						<a class="li" class="dropbtn" href="">About us</a>
 						<div class="dropdown-content">
-							<a href="#">Team Members</a>
+							<a href="aboutus.html">Team Members</a>
 							<a href="#">Game Introduction</a>
 							<a href="#">Contact Us</a>
 						</div> 
