--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>James About Us</title>
+	<title>Project1 Homepage</title>
 	<link rel="stylesheet" href="homepage.css">
 	<style type="text/css">
 		header, section, footer, aside, nav, article, figure, figcaption {
@@ -13,30 +13,86 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js/"></script>
 </head>
 <body>
+	<ul class="circles">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+	</ul>
 	<!-- .wrapper คือ กระดาษลองพื้นขาว ๆ-->
 	<!-- nav ul คือ แถบสีเท่าเข้มตรง navigation bar-->
 	<div class="wrapper">
 		<header>
 			<h1>Yoko's Kitchen</h1>
-			<div class="nav">
-				<div class="ul">
-					<div class="li"><a href="homepage.html">Home</a></div>
-					<div class="li"><a href="">Download</a></div>
-					<div class="li"><a href="">Shops</a></div>	
+		</header>
+		<div class="navbar">
+			<div class="ul">
+				<div class="li">
+					<a class="li" href="homepage.html">Home</a>
+					<a class="li" href="#news">Download</a>
+					<a class="li" href="#news">Shops</a>
 					<div class="dropdown">
-						<div class="li" class="dropbtn"><a href="" class="current">About</a></div>
+						<a class="current" class="dropbtn" href="">About us</a>
 						<div class="dropdown-content">
-							<a href="aboutus.html">Team Member</a>
+							<a href="aboutus.html">Team Members</a>
 							<a href="#">Game Introduction</a>
 							<a href="#">Contact Us</a>
-						</div>
-					</div>
-					<div class="li"><a href="">Search</a></div>	
-					<div class="li" style="margin-left:13em"><a href="">Login</a></div>
-					<div class="li"><a href="">Sign up</a></div>
-				</ul>
+						</div> 
+					</div> 
+					<a class="li" href="#news">Search</a>
+					<a class="li" href="#news" style="margin-left: 13em">Log in</a>
+					<a class="li" href="#news">Sign up</a>
+				</div>
 			</div>
-		</header>
+		  </div>
 		<section class="courses">
 			<article>
 				<figure>
@@ -49,6 +105,29 @@
 					<h3>Water Splashing Animation</h3>
 				</hgroup>
 				<p>In the recent Minecraft Caves & Cliffs Part II trailer, Alex falls into the new lush caves biome in the water with axolotls. When doing so, she causes...</p>
+			</article>
+			<article>
+				<figure>
+					<img src="https://www.gamespot.com/a/uploads/original/1632/16320660/3912568-2f0e7-16345886554882-1920.jpg" alt="Warden" width="100%" height="170px" />
+					<figcaption>Warden</figcaption>
+				</figure>
+				<hgroup>
+					<h2>Latest Minecraft Mob!!</h2>
+					<h3>Monster of The Depht, Warden!</h3>
+				</hgroup>
+				<p>The Warden will be the first blind mob to be added to Minecraft. 
+					Instead of following the player normally, it uses the sculk-like sensors on its head to detect vibrations.</p>
+			</article>
+			<article>
+				<figure>
+					<img src="https://staticg.sportskeeda.com/editor/2021/08/c1b9a-16304326776145-800.jpg" alt="Axolotl" width="100%" height="170px" />
+					<figcaption>Axolotl</figcaption>
+				</figure>
+				<hgroup>
+					<h2>New Minecraft Mob!!</h2>
+					<h3>Cuteness of the marine</h3>
+				</hgroup>
+				<p>Axolotls are tamable, aquatic mobs that will spawn in the rivers of the lush caves.</p>
 			</article>
 		</section>
 		<aside>
@@ -70,7 +149,7 @@
 			
 		</aside>
 		<footer>
-			&copy; Last Updated: 12-Jan-2022  
+			&copy; Last Updated: 12-Jan-2022 at 10:46 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
