--- a/aboutus.html
+++ b/aboutus.html
@@ -110,7 +110,7 @@
 				<figure>
 					<img src="NawatNgern-Anantaporn.jpg"
 						alt="Nawat Ngern-Anantaporn" width="100%" />
-					<figcaption>Phutana Ampunant</figcaption>
+					<figcaption>Nawat Ngern-Anantaporn</figcaption>
 				</figure>	
 				<hgroup>
 					<h2>New Minecraft Update!!</h2>
