--- a/aboutus.html
+++ b/aboutus.html
@@ -77,7 +77,7 @@
 			<div class="ul">
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
-					<a class="li" href="#news">Download</a>
+					<a class="li" href="downloadpage.html">Download</a>
 					<a class="li" href="#news">Shops</a>
 					<div class="dropdown">
 						<a class="current" class="dropbtn" href="">About us</a>
