--- a/login_page.html
+++ b/login_page.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
-<html>
-    <head></head>
-</html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="login_page.css">
+    <style type="text/css">
+        header, section, footer, aside, nav, article, figure, figcaption{
+            display: block;
+        }
+    </style>
+</head>
 <body>
-    
+    <!-- -->
 </body>
+</html>
