Update Homepage Login link

--- a/homepage.html
+++ b/homepage.html
@@ -88,7 +88,7 @@
 						</div> 
 					</div> 
 					<a class="li" href="#news">Search</a>
-					<a class="li" href="#news" style="margin-left: 13em">Log in</a>
+					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
