--- a/login_page.html
+++ b/login_page.html
@@ -34,7 +34,7 @@
 						</div> 
 					</div> 
 					<a class="li" href="#news">Search</a>
-					<a class="current" href="#news" style="margin-left: 13em">Log in</a>
+					<a class="current" href="login_page.html" style="margin-left: 13em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
