--- a/downloadpage.html
+++ b/downloadpage.html
@@ -79,7 +79,7 @@
 					<a class="current" href="downloadpage.html">Download</a>
 					<a class="li" href="#news">Shops</a>
 					<div class="dropdown">
-						<a class="li" class="dropbtn" href="">About us</a>
+						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
 							<a href="#">Game Introduction</a>
