--- a/login_page.html
+++ b/login_page.html
@@ -26,7 +26,7 @@
 					<a class="li" href="#news">Download</a>
 					<a class="li" href="#news">Shops</a>
 					<div class="dropdown">
-						<a class="li" class="dropbtn" href="">About us</a>
+						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
 							<a href="#">Game Introduction</a>
