--- a/downloadpage.html
+++ b/downloadpage.html
@@ -77,7 +77,7 @@
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
 					<a class="current" href="downloadpage.html">Download</a>
-					<a class="li" href="#news">Shops</a>
+					<a class="li" href="shoppage.html">Shops</a>
 					<div class="dropdown">
 						<a class="li" class="dropbtn" href="">About us</a>
 						<div class="dropdown-content">
@@ -114,7 +114,7 @@
 					<figcaption>Halo Infinite</figcaption>
 				</figure>
 				<figure class="card">
-					<img src="https://cdn.discordapp.com/attachments/874612979549736983/931177736544849990/wp2178743-game-logo-wallpapers.png" />
+					<img src="https://www.xtrafondos.com/thumbs/vertical/1_5888.jpg" />
 					<figcaption>Dota 2</figcaption>
 				</figure>
 				<figure class="card">
@@ -164,7 +164,7 @@
 				</div>
 		</section>
 		<footer>
-			&copy; Last Updated: 13-Jan-2022 at 8:10 PM 
+			&copy; Last Updated: 14-Jan-2022 at 11:55 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
