Update my profile

--- a/aboutus.html
+++ b/aboutus.html
@@ -150,7 +150,7 @@
 			</article>
 			<article>
 				<figure>
-					<img src="https://cdn.discordapp.com/attachments/564720921970081792/931202791022661664/unknown.png"
+					<img src="https://scontent.fbkk28-1.fna.fbcdn.net/v/t1.15752-9/271709828_275242864532311_6310369273954713714_n.png?_nc_cat=104&ccb=1-5&_nc_sid=ae9488&_nc_eui2=AeH3YLu7vKrmOjnJKYUxh5-JaiPpQgaxJk1qI-lCBrEmTfJ3Q6Jqr2t3BgsPfgeKKYqY8UKJa7FgRSxAMDbw81p1&_nc_ohc=uBfDl64cK28AX9jgfL-&_nc_ht=scontent.fbkk28-1.fna&oh=03_AVJBWgoiV-saUihVe6ZMrD5O1X5UqNkcHALVEhLxv8LErA&oe=620B19E7"
 						alt="Patiphan Chan" width="100%" />
 					<figcaption>Patiphan Chan</figcaption>
 				</figure>	
