Update my profile

--- a/aboutus.html
+++ b/aboutus.html
@@ -176,7 +176,7 @@
 					<h2>Patiphan Chan</h2>
 					<h3>6388184 Section 2 MUICT</h3>
 				</hgroup>
-				<p>Hey, I am Golf, a second year student in MUICT. I am just a simple man who intensly play games, being a keyboard enthusiast, and a slow programmer.<br> <b><i>"I will bury you so completely, the Earth will turn over a thousand times before your body is dug up."</i></b></p>
+				<p>Hey, I am Golf, a second year student in MUICT. I am just a simple man who intensly play gacha and rhythm games, being a keyboard enthusiast, and a slow programmer.<br> <b><i>"I will bury you so completely, the Earth will turn over a thousand times before your body is dug up."</i></b></p>
 			</article>
 		</section>
 		<aside>
