Contact Us preliminary created

--- a/homepage.html
+++ b/homepage.html
@@ -84,7 +84,7 @@
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
 							<a href="#">Game Introduction</a>
-							<a href="#">Contact Us</a>
+							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
 					<a class="li" href="#news">Search</a>
@@ -147,14 +147,8 @@
 				<a href="">How to top up?</a>
 			</section>
 			<section class="contact-details">
-				<h2>Contact</h2>
-				<p> Mahidol University<br>
-					69 Faggot Street<br>
-					Salaya Distict<br>
-					Thailand A4 EZ
-				</p>
+				<!-- Moved to contactus.html-->>
 			</section>
-			
 		</aside>
 		<footer>
 			&copy; Last Updated: 14-Jan-2022 at 11:55 PM 
