--- a/aboutus.html
+++ b/aboutus.html
@@ -88,7 +88,7 @@
 						</div> 
 					</div> 
 					<a class="li" href="#news">Search</a>
-					<a class="li" href="#news" style="margin-left: 13em">Log in</a>
+					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
@@ -104,7 +104,7 @@
 					<h2>Phuthana Ampunant</h2>
 					<h3>6388002 Section 2 MUICT</h3>
 				</hgroup>
-				<p>My name is Phuthana Ampunant, I like to read books and play game, also I'm hungry and I will finish this later.</p>
+				<p>My name is Phuthana Ampunant, I like to read books and play games, anyway, I'm hungry and I will finish this later.</p>
 				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
 					<path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
 				</svg>
