--- a/homepage.html
+++ b/homepage.html
@@ -147,7 +147,7 @@
 				<a href="">How to top up?</a>
 			</section>
 			<section class="contact-details">
-				<!-- Moved to contactus.html-->>
+				<!-- Moved to contactus.html-->
 			</section>
 		</aside>
 		<footer>
