A little update on link

--- a/login_page.html
+++ b/login_page.html
@@ -41,8 +41,10 @@
 		  </div>
 
         <section class="courses">
-            
-            <img src="https://c.tenor.com/bbFzsZ-So-0AAAAd/husshere-tattari.gif" class="center" alt="ricardo" class="center" width=500px height=500px>
+            <figure>
+				<img src="https://media.discordapp.net/attachments/927807364835455027/932684293220732938/GenerousNimbleIbis-size_restricted.gif" class="center" alt="ricardo" class="center" width=900px>
+			</figure>
+				
             <p class="abandonallhope">Abandon all hope, ye who enter here <br> ここから入らんとする者は一切の希望を放棄せよ</p>
 			<form>
 				<div class="loginbox">
