Login even more iatnehn

--- a/login_page.html
+++ b/login_page.html
@@ -46,10 +46,13 @@
             <p class="abandonallhope">Abandon all hope, ye who enter here <br> ここから入らんとする者は一切の希望を放棄せよ</p>
 			<form>
 				<div class="loginbox">
-					<input type="text" id="username" title="Faggot" placeholder="username (or email)" required><br>
-					<input type="text" id="password" title="Faggot2" placeholder="password" required><br>
-					<button type="submit">Login</button>
-				</div>
+					<div class="input">
+						<input type="text" id="username" title="Faggot" placeholder="username (or email)" required>
+					</div>
+					<div class="input">
+					<input type="text" id="password" title="Faggot2" placeholder="password" required>
+					</div>
+				<button type="submit">Login</button>
 			</form>
 			<div class="belowlogin">
 				<div class="register">
