--- a/downloadpage.html
+++ b/downloadpage.html
@@ -83,11 +83,11 @@
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
 							<a href="#">Game Introduction</a>
-							<a href="#">Contact Us</a>
+							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
 					<a class="li" href="#news">Search</a>
-					<a class="li" href="#news" style="margin-left: 13em">Log in</a>
+					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
