--- a/login_page.html
+++ b/login_page.html
@@ -23,19 +23,19 @@
 			<div class="ul">
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
-					<a class="li" href="#news">Download</a>
+					<a class="li" href="downloadpage.html">Download</a>
 					<a class="li" href="#news">Shops</a>
 					<div class="dropdown">
 						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
 							<a href="#">Game Introduction</a>
-							<a href="#">Contact Us</a>
+							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
 					<a class="li" href="#news">Search</a>
 					<a class="current" href="login_page.html" style="margin-left: 13em">Log in</a>
-					<a class="li" href="#news">Sign up</a>
+					<a class="li" href="#">Sign up</a>
 				</div>
 			</div>
 		  </div>
