--- a/contactus.html
+++ b/contactus.html
@@ -80,41 +80,33 @@
 					<a class="li" href="downloadpage.html">Download</a>
 					<a class="li" href="shoppage.html">Shops</a>
 					<div class="dropdown">
-						<a class="li" class="dropbtn">About us</a>
+						<a class="current" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
 							<a href="#">Game Introduction</a>
-							<a href="#">Contact Us</a>
+							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
 					<a class="li" href="#news">Search</a>
-					<a class="li" href="#news" style="margin-left: 13em">Log in</a>
+					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
-		  </div>
-		<section class="courses">
-			<article>
-
-			</article>
-			<article>
-
-			</article>
-		</section>
+		</div>
 		<aside>
 			<section class="contact-details">
 				<h2>Contact</h2>
 				<p> Mahidol University<br>
 					69 Faggot Street<br>
-					Salaya Distict<br>
+					Salaya District<br>
 					Thailand A4 EZ
 				</p>
                 <p> Contact number: 420-6969-420</p>
+				<p> Email: SweatyRicardo@faggotmail.com</p>
 			</section>
-			
 		</aside>
 		<footer>
-			&copy; Last Updated: 14-Jan-2022 at 11:55 PM 
+			&copy; Last Updated: 22-Jan-2022 at 16:05 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
