--- a/login_page.html
+++ b/login_page.html
@@ -54,7 +54,7 @@
 						<input type="text" id="username" title="Faggot" placeholder="username (or email)" required>
 					</div>
 					<div class="input">
-					<input type="text" id="password" title="Faggot2" placeholder="password" required>
+					<input type="password" id="password" title="Faggot2" placeholder="password" required>
 					</div>
 				<button type="submit">
 					<i class="fa fa-sign-in"></i>
