--- a/Search_page.html
+++ b/Search_page.html
@@ -43,16 +43,17 @@
 		  </div>		
 
 		<section class="courses">			
-			<article>					
-				<Center>
-					<h2>How can we help?</h2>						
-				</Center>
-				<br><br><br>
+			<article>							
+				<h3 class="BG-Card">How can we help?</h3>	
+				<p style="color: crimson;">Please use enter to submit kub</p>							
+				<br><br>
 				<div class="box">
-					<div name="search">
-						<input type="text" class="input" name="txt" placeholder="    Enter to submit" 
-						id="Find" onmouseout="ClearText()">
-					</div>
+					<form name="search" onsubmit="return Halt_Function()" autocomplete="off">						
+						<div class="autocomplete">
+							<input type="text" class="input" name="txt" placeholder="    Enter to submit" 
+							id="Find" onmouseout="ClearText(); ">
+						</div>
+					</form>
 					<icon > 
 						<img src="https://cdn.discordapp.com/attachments/917582730982723625/930743559936675870/480px-Magnifying_glass_icon.svg.png"
 						width=30px;	height=30px; >
@@ -62,20 +63,48 @@
 				<button id="Work" onclick="toggle_Result()" hidden>Button</button>			
 				
 				<div class="container" id="Result" style="visibility:hidden;">
-					<h2>Search Result</h2>
+					<h3>Search Result</h3>
 					<div class="content">					  
-					  <h2>Test and this should be Search result</h2>
+					  <h3>Test and this should be Search result</h3>
+					  <card></card>
 					</div>
 					<div class="curtain"></div>
 				</div>
+
+				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>		
+
+				<h2><strong>Recommended News</strong></h2>
+				<section class="popular-questions" id="Ads-on"></section>
+				<div class="news">
+					<figure class="article">
+						<img src="https://images4.alphacoders.com/116/1169016.jpg" />
+						<figcaption>
+							<h3>Elden Ring releases Date</h3>
+							<p>
+								Elden Ring is an upcoming action role-playing game developed by FromSoftware and published by Bandai Namco Entertainment.
+								The game, directed by Hidetaka Miyazaki, was made in collaboration with fantasy novelist George R. R. Martin, who provided material for the game's setting.
+							</p>
+						</figcaption>
+					</figure>
+					<figure class="article">
+						<img src="https://cdn.discordapp.com/attachments/917582730982723625/936964724954894356/maxresdefault.jpg" />
+						<figcaption>
+							<h3>Pubg filing case on Free Fire</h3>
+							<p>
+								PUBG developer Krafton is suing Garena, the company behind two hit mobile games – Free Fire and Free Fire Max. The company has accused Garena of copying the original PUBG game for PCs and consoles (now called PUBG: Battlegrounds) in the Free Fire games.
+							</p>
+						</figcaption>
+					</figure>
+				</div>
+			</section>
 
 			</article>
 		</section>	
 		
 		
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>			
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>		
 		<footer>
-			&copy; Last Updated: 20-Jan-2022 at 4:38 PM
+			&copy; Last Updated: 29-Jan-2022 at 69:96 GM
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
@@ -88,18 +117,27 @@
 		console.log("Test");
 		if (document.getElementById('Result').style.visibility === 'hidden') 
 		{
-			document.getElementById('Result').style.visibility = 'visible';
+			document.getElementById('Result').style.visibility = 'visible';			
 		}
 		else 
 		{
 			document.getElementById('Result').style.visibility = 'hidden';
-		}
+		}	
 	}
 
 	function ClearText() {
 		
 		document.getElementById("Find").value = ' '
 		document.getElementById("Find").ariaPlaceholder= '    Enter to submit'
+		
+	}
+
+	//This is use for stop from to send Data and show result animation. However,This line will can be delete depends on work
+	function Halt_Function()
+	{
+		/*Note Cr. Aj.jidapa & stackoverflow form basicly, form by default it will use get method so the best way to re-check error before send data to server is 
+		Have some fuction here and check data before send it (use false as Halt Function until it correct so swap it to be true)*/
+		return false;
 	}
 
 	//Full Function Triger When Enter
@@ -120,7 +158,112 @@
 		}
 	});
 
+	/* ============================================            Auto complete              =====================================================================*/
 	
+	/*initiate the autocomplete function on the "myInput" element, and pass along the countries array as possible autocomplete values:*/
+	
+	function autocomplete(inp, arr) {
+	/*the autocomplete function takes two arguments,
+	the text field element and an array of possible autocompleted values:*/
+	var currentFocus;
+	/*execute a function when someone writes in the text field:*/
+	inp.addEventListener("input", function(e) {
+		var a, b, i, val = this.value;
+		/*close any already open lists of autocompleted values*/
+		closeAllLists();
+		if (!val) { return false;}
+		currentFocus = -1;
+		/*create a DIV element that will contain the items (values):*/
+		a = document.createElement("DIV");
+		a.setAttribute("id", this.id + "autocomplete-list");
+		a.setAttribute("class", "autocomplete-items");
+		/*append the DIV element as a child of the autocomplete container:*/
+		this.parentNode.appendChild(a);
+		/*for each item in the array...*/
+		for (i = 0; i < arr.length; i++) {
+			/*check if the item starts with the same letters as the text field value:*/
+			if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
+			/*create a DIV element for each matching element:*/
+			b = document.createElement("DIV");
+			/*make the matching letters bold:*/
+			b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
+			b.innerHTML += arr[i].substr(val.length);
+			/*insert a input field that will hold the current array item's value:*/
+			b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+			/*execute a function when someone clicks on the item value (DIV element):*/
+			b.addEventListener("click", function(e) {
+				/*insert the value for the autocomplete text field:*/
+				inp.value = this.getElementsByTagName("input")[0].value;
+				/*close the list of autocompleted values,
+				(or any other open lists of autocompleted values:*/
+				closeAllLists();
+			});
+			a.appendChild(b);
+			}
+		}
+	});
+
+	  /*execute a function presses a key on the keyboard:*/
+	  inp.addEventListener("keydown", function(e) {
+      var x = document.getElementById(this.id + "autocomplete-list");
+      if (x) x = x.getElementsByTagName("div");
+      if (e.keyCode == 40) {
+        /*If the arrow DOWN key is pressed,
+        increase the currentFocus variable:*/
+        currentFocus++;
+        /*and and make the current item more visible:*/
+        addActive(x);
+      } else if (e.keyCode == 38) { //up
+        /*If the arrow UP key is pressed,
+        decrease the currentFocus variable:*/
+        currentFocus--;
+        /*and and make the current item more visible:*/
+        addActive(x);
+      } else if (e.keyCode == 13) {
+        /*If the ENTER key is pressed, prevent the form from being submitted,*/
+        e.preventDefault();
+        if (currentFocus > -1) {
+          /*and simulate a click on the "active" item:*/
+          if (x) x[currentFocus].click();
+        }
+      }
+  	});
+  	function addActive(x) {
+    /*a function to classify an item as "active":*/
+    if (!x) return false;
+    /*start by removing the "active" class on all items:*/
+    removeActive(x);
+    if (currentFocus >= x.length) currentFocus = 0;
+    if (currentFocus < 0) currentFocus = (x.length - 1);
+    /*add class "autocomplete-active":*/
+    x[currentFocus].classList.add("autocomplete-active");
+  }
+  function removeActive(x) {
+    /*a function to remove the "active" class from all autocomplete items:*/
+    for (var i = 0; i < x.length; i++) {
+      x[i].classList.remove("autocomplete-active");
+    }
+  }
+  function closeAllLists(elmnt) {
+    /*close all autocomplete lists in the document,
+    except the one passed as an argument:*/
+    var x = document.getElementsByClassName("autocomplete-items");
+    for (var i = 0; i < x.length; i++) {
+      if (elmnt != x[i] && elmnt != inp) {
+        x[i].parentNode.removeChild(x[i]);
+      }
+    }
+  }
+  /*execute a function when someone clicks in the document:*/
+  document.addEventListener("click", function (e) {
+      closeAllLists(e.target);
+  });
+}
+/* Data in Auto Complete - Lazy to create A-Z so if you want do it!*/
+
+var Data = ["A Bastard's Tale (PC)","battlefield 2042 (PC)","C.A.T.S. - Carefully Attempting not To Screw up (PC)",'Doom (PC)',"E.T (PC)","five night at freddy 2(PC)","Gabriels Worlds The Adventure (PC)","Hell blade (PC)","I Am Setsuna (PC)",'Jagged Alliance: Gold Edition (PC)',"Minecraft (PC)","Test right Ha I got you!","Use Enter to Submit!!!!!"];
+
+autocomplete(document.getElementById("Find"), Data);		
 
 </script>
 </html>
