Change some incorrect navbar link

--- a/Search_page.html
+++ b/Search_page.html
@@ -24,19 +24,19 @@
 		<div class="navbar">
 			<div class="ul">
 				<div class="li">
-					<a class="current" href="homepage.html">Home</a>
-					<a class="li" href="#news">Download</a>
-					<a class="li" href="#news">Shops</a>
+					<a class="li" href="homepage.html">Home</a>
+					<a class="li" href="downloadpage.html">Download</a>
+					<a class="li" href="#">Shops</a>
 					<div class="dropdown">
-						<a class="li" class="dropbtn" href="">About us</a>
+						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
 							<a href="#">Game Introduction</a>
-							<a href="#">Contact Us</a>
+							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
-					<a class="li" href="#news">Search</a>
-					<a class="li" href="#news" style="margin-left: 13em">Log in</a>
+					<a class="current" href="Search_page.html">Search</a>
+					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
