--- a/homepage.html
+++ b/homepage.html
@@ -78,7 +78,7 @@
 				<div class="li">
 					<a class="current" href="homepage.html">Home</a>
 					<a class="li" href="downloadpage.html">Download</a>
-					<a class="li" href="shoppage.html">Shops</a>
+					<a class="li" href="#">Shops</a>
 					<div class="dropdown">
 						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
@@ -87,7 +87,7 @@
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
-					<a class="li" href="#news">Search</a>
+					<a class="li" href="Search_page.html">Search</a>
 					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
