--- a/login_page.html
+++ b/login_page.html
@@ -26,7 +26,7 @@
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
 					<a class="li" href="downloadpage.html">Download</a>
-					<a class="li" href="#news">Shops</a>
+					<a class="li" href="#">Shops</a>
 					<div class="dropdown">
 						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
@@ -35,9 +35,9 @@
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
-					<a class="li" href="#news">Search</a>
+					<a class="li" href="Search_page.html">Search</a>
 					<a class="current" href="login_page.html" style="margin-left: 13em">Log in</a>
-					<a class="li" href="#">Sign up</a>
+					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
 		  </div>
