Delete Shop Page

--- a/aboutus.html
+++ b/aboutus.html
@@ -77,18 +77,16 @@
 			<div class="ul">
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
-					<a class="li" href="downloadpage.html">Download</a>
-					<a class="li" href="#">Shops</a>
+					<a class="li" href="downloadpage.html">Games</a>
 					<div class="dropdown">
 						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
-							<a href="#">Game Introduction</a>
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
 					<a class="li" href="Search_page.html">Search</a>
-					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
+					<a class="li" href="login_page.html" style="margin-left: 18em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
@@ -132,7 +130,7 @@
 				</figure>	
 				<hgroup>
 					<h2>Nawat Ngern-anantaporn</h2>
-					<h3>6388034 Sec2 MUICT</h3>
+					<h3>6388034 Section 2 MUICT</h3>
 				</hgroup>				
 				<p>My name is Nawat, the laziest one. Hopefully, one day I will have any friends to play Total war 2 or Civ6 OwO. If you have any uncomfortable the on animation searching page please don't kill me, Thx</p>
 				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -221,7 +219,7 @@
 			
 		</aside>
 		<footer>
-			&copy; Last Updated: 22-Jan-2022 at 16:05 PM 
+			&copy; Last Updated: 31-Jan-2022 at 23:43 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
