--- a/login_page.html
+++ b/login_page.html
@@ -25,18 +25,16 @@
 			<div class="ul">
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
-					<a class="li" href="downloadpage.html">Download</a>
-					<a class="li" href="#">Shops</a>
+					<a class="li" href="downloadpage.html">Games</a>
 					<div class="dropdown">
 						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
-							<a href="#">Game Introduction</a>
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
 					<a class="li" href="Search_page.html">Search</a>
-					<a class="current" href="login_page.html" style="margin-left: 13em">Log in</a>
+					<a class="current" href="login_page.html" style="margin-left: 18em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
@@ -63,10 +61,10 @@
 			</form>
 			<div class="belowlogin">
 				<div class="register">
-					Don't have an account? <a class="belowloginlink" href="https://bigmuscle.com/">Register</a>
+					Don't have an account? <a class="belowloginlink" href="https://biPMuscle.com/">Register</a>
 				</div>
 				<div class="reset">
-					Forgot your password? <a class="belowloginlink" href="https://bigmuscle.com/">Reset it</a>  
+					Forgot your password? <a class="belowloginlink" href="https://biPMuscle.com/">Reset it</a>  
 				</div>
 			</div>
             
@@ -75,7 +73,7 @@
 			
 		</aside>
 		<footer>
-			&copy; Last Updated: 18-Jan-2022 at 01:50 AM 
+			&copy; Last Updated: 31-Jan-2022 at 23:43 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
