--- a/Search_page.html
+++ b/Search_page.html
@@ -25,18 +25,16 @@
 			<div class="ul">
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
-					<a class="li" href="downloadpage.html">Download</a>
-					<a class="li" href="#">Shops</a>
+					<a class="li" href="downloadpage.html">Games</a>
 					<div class="dropdown">
 						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
-							<a href="#">Game Introduction</a>
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
 					<a class="current" href="Search_page.html">Search</a>
-					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
+					<a class="li" href="login_page.html" style="margin-left: 18em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
@@ -104,7 +102,7 @@
 		
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>		
 		<footer>
-			&copy; Last Updated: 29-Jan-2022 at 69:96 GM
+			&copy; Last Updated: 31-Jan-2022 at 23:43 PM
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
