--- a/contactus.html
+++ b/contactus.html
@@ -77,18 +77,16 @@
 			<div class="ul">
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
-					<a class="li" href="downloadpage.html">Download</a>
-					<a class="li" href="#">Shops</a>
+					<a class="li" href="downloadpage.html">Games</a>
 					<div class="dropdown">
 						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
-							<a href="#">Game Introduction</a>
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
 					<a class="li" href="Search_page.html">Search</a>
-					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
+					<a class="li" href="login_page.html" style="margin-left: 18em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
@@ -106,7 +104,7 @@
 			</section>
 		</aside>
 		<footer>
-			&copy; Last Updated: 22-Jan-2022 at 16:05 PM 
+			&copy; Last Updated: 31-Jan-2022 at 23:43 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
