- Update (work progress on Monday that I forget to upload)

--- a/aboutus.html
+++ b/aboutus.html
@@ -77,16 +77,18 @@
 			<div class="ul">
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
-					<a class="li" href="downloadpage.html">Games</a>
+					<a class="li" href="downloadpage.html">Download</a>
+					<a class="li" href="#news">Shops</a>
 					<div class="dropdown">
-						<a class="li" class="dropbtn">About us</a>
+						<a class="current" class="dropbtn" href="">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
+							<a href="#">Game Introduction</a>
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
-					<a class="li" href="Search_page.html">Search</a>
-					<a class="li" href="login_page.html" style="margin-left: 18em">Log in</a>
+					<a class="li" href="#news">Search</a>
+					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
@@ -124,13 +126,13 @@
 			</article>
 			<article>
 				<figure>
-					<img src="https://cdn.discordapp.com/attachments/917582730982723625/936966231506968596/FB_IMG_1560130394778.jpg"
+					<img src="https://cdn.discordapp.com/attachments/917582730982723625/937296739961020446/FB_IMG_1560130394778.jpg"
 						alt="Nawat Ngern-Anantaporn" width="100%" />
 					<figcaption>Nawat Ngern-Anantaporn</figcaption>
 				</figure>	
 				<hgroup>
 					<h2>Nawat Ngern-anantaporn</h2>
-					<h3>6388034 Section 2 MUICT</h3>
+					<h3>6388034 Section2 MUICT</h3>
 				</hgroup>				
 				<p>My name is Nawat, the laziest one. Hopefully, one day I will have any friends to play Total war 2 or Civ6 OwO. If you have any uncomfortable the on animation searching page please don't kill me, Thx</p>
 				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -219,7 +221,7 @@
 			
 		</aside>
 		<footer>
-			&copy; Last Updated: 31-Jan-2022 at 23:43 PM 
+			&copy; Last Updated: 22-Jan-2022 at 16:05 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
