Add comments to html and css page

--- a/login_page.html
+++ b/login_page.html
@@ -21,6 +21,7 @@
 		<header>
 			<h1>On top of navigation  bar</h1>
 		</header>
+		<!-- Navigation bar -->
 		<div class="navbar">
 			<div class="ul">
 				<div class="li">
@@ -44,11 +45,14 @@
 
         <section class="courses">
             <figure>
+				<!-- Image for login page (ricardo) -->
 				<img src="https://media.discordapp.net/attachments/927807364835455027/932684293220732938/GenerousNimbleIbis-size_restricted.gif" class="center" alt="ricardo" class="center" width=900px>
 			</figure>
-				
+			
+			<!-- Text below the image, above the login boxes -->
             <p class="abandonallhope">Abandon all hope, ye who enter here <br> ここから入らんとする者は一切の希望を放棄せよ</p>
 			<form>
+				<!-- Login box and login button -->
 				<div class="loginbox">
 					<div class="input">
 						<input type="text" id="username" title="Faggot" placeholder="username (or email)" required>
@@ -61,6 +65,7 @@
 					Login
 				</button>
 			</form>
+			<!-- Register and reset password, below login box -->
 			<div class="belowlogin">
 				<div class="register">
 					Don't have an account? <a class="belowloginlink" href="https://bigmuscle.com/">Register</a>
@@ -75,7 +80,7 @@
 			
 		</aside>
 		<footer>
-			&copy; Last Updated: 18-Jan-2022 at 01:50 AM 
+			&copy; Last Updated: 5-Feb-2022 at 3:00 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
