I left the part that is easy uncommented.
~ Change "Downloads" navbar to "Games".
~ Delete some useless script from every pages.
~ Fix the hovering bug in contactus page.
~ Edit the composition of search page

--- a/aboutus.html
+++ b/aboutus.html
@@ -10,8 +10,8 @@
 			display: block; 
 	}
 	</style>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js/"></script>
 </head>
+<!-- frome line 8th to 50th, they are implement from the homepage page -->
 <body>
 	<ul class="circles">
 				<li></li>
@@ -24,71 +24,25 @@
 				<li></li>
 				<li></li>
 				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
 	</ul>
-	<!-- .wrapper คือ กระดาษลองพื้นขาว ๆ-->
-	<!-- nav ul คือ แถบสีเท่าเข้มตรง navigation bar-->
 	<div class="wrapper">
 		<header>
-			<h1>Yoko's Kitchen</h1>
+			<!-- background image can be changed in css -->
 		</header>
 		<div class="navbar">
 			<div class="ul">
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
-					<a class="li" href="downloadpage.html">Download</a>
-					<a class="li" href="#news">Shops</a>
+					<a class="li" href="downloadpage.html">Games</a>
 					<div class="dropdown">
 						<a class="current" class="dropbtn" href="">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
-							<a href="#">Game Introduction</a>
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
-					<a class="li" href="#news">Search</a>
-					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
+					<a class="li" href="Search_page.html">Search</a>
+					<a class="li" href="login_page.html" style="margin-left: 18em">Log in</a>
 					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
