--- a/contactus.html
+++ b/contactus.html
@@ -3,14 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Project1 Homepage</title>
+	<title>Project1 Contact Page</title>
 	<link rel="stylesheet" href="contactus.css">
 	<style type="text/css">
 		header, section, footer, aside, nav, article, figure, figcaption {
 			display: block; 
 	}
 	</style>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js/"></script>
 </head>
 <body>
 	<ul class="circles">
@@ -24,54 +23,10 @@
 				<li></li>
 				<li></li>
 				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
 	</ul>
-	<!-- .wrapper คือ กระดาษลองพื้นขาว ๆ-->
-	<!-- nav ul คือ แถบสีเท่าเข้มตรง navigation bar-->
 	<div class="wrapper">
 		<header>
-			<h1>Yoko's Kitchen</h1>
+			<!-- background image can be changed in css -->
 		</header>
 		<div class="navbar">
 			<div class="ul">
@@ -79,7 +34,7 @@
 					<a class="li" href="homepage.html">Home</a>
 					<a class="li" href="downloadpage.html">Games</a>
 					<div class="dropdown">
-						<a class="li" class="dropbtn">About us</a>
+						<a class="current" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
 							<a href="contactus.html">Contact Us</a>
@@ -104,7 +59,7 @@
 			</section>
 		</aside>
 		<footer>
-			&copy; Last Updated: 31-Jan-2022 at 23:43 PM 
+			&copy; Last Updated: 6-Feb-2022 at 13:51 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
