--- a/downloadpage.html
+++ b/downloadpage.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Project1 Homepage</title>
+	<title>Project1 Games Page</title>
 	<link rel="stylesheet" href="downloadpage.css">
 	<style type="text/css">
 		header, section, footer, aside, nav, article, figure, figcaption {
@@ -11,6 +11,7 @@
 	}
 	</style>
 </head>
+<!-- frome line 8th to 50th, they are implement from the homepage page -->
 <body>
 	<ul class="circles">
 				<li></li>
@@ -23,54 +24,10 @@
 				<li></li>
 				<li></li>
 				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
 	</ul>
-	<!-- .wrapper คือ กระดาษลองพื้นขาว ๆ-->
-	<!-- nav ul คือ แถบสีเท่าเข้มตรง navigation bar-->
 	<div class="wrapper">
 		<header>
-			<h1>Yoko's Kitchen</h1>
+			<!-- background image can be changed in css -->
 		</header>
 		<div class="navbar">
 			<div class="ul">
@@ -94,48 +51,48 @@
 		<section class="courses">
 			<article>
 				<h2><strong>All Games<span></span></strong></h2>
-			<div class="cards">
-				<figure class="card">
-					<img src="https://cdn.discordapp.com/attachments/874612979549736983/931125708766478346/minecraft-dungeons_1220x2160_xtrafondos.com.jpg" />
-					<figcaption>Minecraft Dungeon</figcaption>
-				</figure>
-				<figure class="card">
-					<img src="https://cdn.discordapp.com/attachments/874612979549736983/931165954224848956/WallpaperDog-17104041.jpg" />
-					<figcaption>Minecraft</figcaption>
-				</figure>
-				<figure class="card">
-					<img src="https://www.xtrafondos.com/thumbs/vertical/1_9134.jpg" />
-					<figcaption>Have a Nice Death</figcaption>
-				</figure>
-				<figure class="card">
-					<img src="https://www.xtrafondos.com/thumbs/vertical/1_6770.jpg" />
-					<figcaption>Halo Infinite</figcaption>
-				</figure>
-				<figure class="card">
-					<img src="https://www.xtrafondos.com/thumbs/vertical/1_5888.jpg" />
-					<figcaption>Dota 2</figcaption>
-				</figure>
-				<figure class="card">
-					<img src="https://cdn.discordapp.com/attachments/874612979549736983/931173316893474867/LOL.png" />
-					<figcaption>League of Legends</figcaption>
-				</figure>
-				<figure class="card">
-					<img src="https://www.xtrafondos.com/thumbs/vertical/1_5549.jpg" />
-					<figcaption>Valorant</figcaption>
-				</figure>
-				<figure class="card">
-					<img src="https://www.xtrafondos.com/thumbs/vertical/1_8506.jpg" />
-					<figcaption>PUBG</figcaption>
-				</figure>
-				<figure class="card">
-					<img src="https://www.xtrafondos.com/thumbs/vertical/1_3197.jpg" />
-					<figcaption>CSGO</figcaption>
-				</figure>
-				<figure class="card">
-					<img src="https://cdn.discordapp.com/attachments/874612979549736983/931171636235886662/2505746.png" />
-					<figcaption>Genshin Impact</figcaption>
-				</figure>
-			</div>
+				<div class="cards">
+					<figure class="card">
+						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931125708766478346/minecraft-dungeons_1220x2160_xtrafondos.com.jpg" />
+						<figcaption>Minecraft Dungeon</figcaption>
+					</figure>
+					<figure class="card">
+						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931165954224848956/WallpaperDog-17104041.jpg" />
+						<figcaption>Minecraft</figcaption>
+					</figure>
+					<figure class="card">
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_9134.jpg" />
+						<figcaption>Have a Nice Death</figcaption>
+					</figure>
+					<figure class="card">
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_6770.jpg" />
+						<figcaption>Halo Infinite</figcaption>
+					</figure>
+					<figure class="card">
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_5888.jpg" />
+						<figcaption>Dota 2</figcaption>
+					</figure>
+					<figure class="card">
+						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931173316893474867/LOL.png" />
+						<figcaption>League of Legends</figcaption>
+					</figure>
+					<figure class="card">
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_5549.jpg" />
+						<figcaption>Valorant</figcaption>
+					</figure>
+					<figure class="card">
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_8506.jpg" />
+						<figcaption>PUBG</figcaption>
+					</figure>
+					<figure class="card">
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_3197.jpg" />
+						<figcaption>CSGO</figcaption>
+					</figure>
+					<figure class="card">
+						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931171636235886662/2505746.png" />
+						<figcaption>Genshin Impact</figcaption>
+					</figure>
+				</div>
 			</article>
 			<h2><strong>What's new?</strong></h2>
 				<section class="popular-questions"></section>
@@ -162,7 +119,7 @@
 				</div>
 		</section>
 		<footer>
-			&copy; Last Updated: 31-Jan-2022 at 23:43 PM 
+			&copy; Last Updated: 6-Feb-2022 at 13:51 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
