--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,6 @@
 			display: block; 
 	}
 	</style>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js/"></script>
 </head>
 <body>
 	<ul class="circles">
@@ -24,56 +23,15 @@
 				<li></li>
 				<li></li>
 				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
 	</ul>
-	<!-- .wrapper คือ กระดาษลองพื้นขาว ๆ-->
-	<!-- nav ul คือ แถบสีเท่าเข้มตรง navigation bar-->
+	<!-- .wrapper is our page paper-->
 	<div class="wrapper">
 		<header>
-			<h1>Yoko's Kitchen</h1>
+			<!-- background image can be changed in css -->
 		</header>
+		<!-- navbar is the whole navigation bar-->
 		<div class="navbar">
+			<!-- ul is for adjusting the navbar .li a to be in place -->
 			<div class="ul">
 				<div class="li">
 					<a class="current" href="homepage.html">Home</a>
@@ -87,12 +45,14 @@
 					</div> 
 					<a class="li" href="Search_page.html">Search</a>
 					<a class="li" href="login_page.html" style="margin-left: 18em">Log in</a>
-					<a class="li" href="#news">Sign up</a>
+					<a class="li" href="Search_page.html">Sign up</a>
 				</div>
 			</div>
 		  </div>
+		<!-- right section for news and description -->
 		<section class="courses">
 			<article>
+				<!-- figure is a picture frame for img-->
 				<figure>
 					<div class="cards-list">
 						<div class="card 1">
@@ -109,7 +69,7 @@
 			<article>
 				<figure>
 					<div class="cards-list">
-						<div class="card 1">
+						<div class="card 2">
 						  <div class="card_image"> <img src="https://www.gamespot.com/a/uploads/original/1632/16320660/3912568-2f0e7-16345886554882-1920.jpg" /> </div>
 						</div>
 					</div>
@@ -124,7 +84,7 @@
 			<article>
 				<figure>
 					<div class="cards-list">
-						<div class="card 1">
+						<div class="card 3">
 						  <div class="card_image"> <img src="https://staticg.sportskeeda.com/editor/2021/08/c1b9a-16304326776145-800.jpg"/> </div>
 						</div>
 					</div>
@@ -144,12 +104,9 @@
 				<a href="">How can I change the skin?</a>
 				<a href="">How to top up?</a>
 			</section>
-			<section class="contact-details">
-				<!-- Moved to contactus.html-->
-			</section>
 		</aside>
 		<footer>
-			&copy; Last Updated: 31-Jan-2022 at 23:43 PM 
+			&copy; Last Updated: 6-Feb-2022 at 13:51 PM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
