--- a/register.html
+++ b/register.html
@@ -89,7 +89,7 @@
         </aside>
 		
 		<footer>
-			&copy; Last Updated: 6-Feb-2022 at 13:51 PM 
+			&copy; Last Updated: 18-Feb-2022 at 12:16 AM 
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
