Update register page link in all pages

--- a/login_page.html
+++ b/login_page.html
@@ -36,7 +36,7 @@
 					</div> 
 					<a class="li" href="Search_page.html">Search</a>
 					<a class="current" href="login_page.html" style="margin-left: 18em">Log in</a>
-					<a class="li" href="#news">Sign up</a>
+					<a class="li" href="register.html">Sign up</a>
 				</div>
 			</div>
 		  </div>
@@ -53,10 +53,10 @@
 				<!-- Login box and login button -->
 				<div class="loginbox">
 					<div class="input">
-						<input type="text" id="username" title="Faggot" placeholder="username (or email)" required>
+						<input type="text" id="username" placeholder="username (or email)" required>
 					</div>
 					<div class="input">
-					<input type="password" id="password" title="Faggot2" placeholder="password" required>
+					<input type="password" id="password" placeholder="password" required>
 					</div>
 				<button type="submit">
 					<i class="fa fa-sign-in"></i>
