--- a/Search_page.html
+++ b/Search_page.html
@@ -33,7 +33,7 @@
 					</div> 
 					<a class="current" href="Search_page.html">Search</a>
 					<a class="li" href="login_page.html" style="margin-left: 18em">Log in</a>
-					<a class="li" href="#news">Sign up</a>
+					<a class="li" href="register.html">Sign up</a>
 				</div>
 			</div>
 		  </div>		
