--- a/seach_page.html
+++ b/seach_page.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Project1 Search Page</title>	
+	<title>Project1 Homepage</title>	
 	<link rel="stylesheet" href="Sp_css.css">
 	<link rel="stylesheet" href="Sp_css_result.css">
 	<style type="text/css">
@@ -13,27 +13,31 @@
 	</style>
 	
 </head>
-<!-- frome line 9th to 39th, they are implement from the homepage page -->
+
 <body>	
+	<!-- .wrapper คือ กระดาษลองพื้นขาว ๆ-->
+	<!-- nav ul คือ แถบสีเท่าเข้มตรง navigation bar-->
 	<div class="wrapper">
 		<header>
-			<!-- background image can be changed in css -->
+			<h1>Yoko's Kitchen</h1>
 		</header>
 		<div class="navbar">
 			<div class="ul">
 				<div class="li">
 					<a class="li" href="homepage.html">Home</a>
-					<a class="li" href="downloadpage.html">Games</a>
+					<a class="li" href="downloadpage.html">Download</a>
+					<a class="li" href="shoppage.html">Shops</a>
 					<div class="dropdown">
 						<a class="li" class="dropbtn">About us</a>
 						<div class="dropdown-content">
 							<a href="aboutus.html">Team Members</a>
+							<a href="#">Game Introduction</a>
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
 					<a class="current" href="Search_page.html">Search</a>
-					<a class="li" href="login_page.html" style="margin-left: 18em">Log in</a>
-					<a class="li" href="register.html">Sign up</a>
+					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
+					<a class="li" href="#news">Sign up</a>
 				</div>
 			</div>
 		  </div>		
@@ -100,7 +104,7 @@
 		
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>		
 		<footer>
-			&copy; Last Updated: 6-Feb-2022 at 13:51 PM 
+			&copy; Last Updated: 29-Jan-2022 at 5:16 PM
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
