Updated all search page links

--- a/aboutus.html
+++ b/aboutus.html
@@ -41,7 +41,7 @@
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
-					<a class="li" href="Search_page.html">Search</a>
+					<a class="li" href="search_page.html">Search</a>
 					<a class="li" href="login_page.html" style="margin-left: 18em">Log in</a>
 					<a class="li" href="register.html">Sign up</a>
 				</div>
