--- a/search_page.html
+++ b/search_page.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Project1 Homepage</title>	
-	<link rel="stylesheet" href="Sp_css.css">
-	<link rel="stylesheet" href="Sp_css_result.css">
+	<link rel="stylesheet" href="search_page.css">
+	<link rel="stylesheet" href="search_result.css">
 	<style type="text/css">
 		header, section, footer, aside, nav, article, figure, figcaption {
 			display: block; 
@@ -35,9 +35,9 @@
 							<a href="contactus.html">Contact Us</a>
 						</div> 
 					</div> 
-					<a class="current" href="Search_page.html">Search</a>
+					<a class="current" href="search_page.html">Search</a>
 					<a class="li" href="login_page.html" style="margin-left: 13em">Log in</a>
-					<a class="li" href="#news">Sign up</a>
+					<a class="li" href="register.html">Sign up</a>
 				</div>
 			</div>
 		  </div>		
